# vantage

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Justfile  LICENSE  MANIFEST.in  NOTICE  Procfile  README.md  SECURITY.md  build-docs.sh  docker-compose.yml  docs-wrangler.toml  pyproject.toml  ruff.toml  vantage-docker
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  release.yml
docs/: development.md  mermaid-diagrams-test.md  performance-diagnostics.md  pre-promote-checks.md
docs/design/: jj-history-viewer.md  technical_spec.md  working-directory-diffs.md
docs/research/: jj-cli.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite-changelog-plugin.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: basic.spec.ts  commit_info.spec.ts  ctrl_click.spec.ts  livereload.spec.ts  mermaid.spec.ts  navigation.spec.ts  sidebar.spec.ts  ui_behavior.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  virtual-changelog.d.ts
frontend/src/components/: AppLink.test.tsx  AppLink.tsx  ConnectionBanner.tsx  DiffViewer.test.tsx  DiffViewer.tsx  DirectoryViewer.test.tsx  DirectoryViewer.tsx  FilePicker.tsx  FileTree.test.tsx  FileTree.tsx  FrontmatterDisplay.test.tsx  FrontmatterDisplay.tsx  KeyboardShortcuts.test.tsx  KeyboardShortcuts.tsx  MarkdownViewer.test.tsx  MarkdownViewer.tsx  MermaidDiagram.test.tsx  MermaidDiagram.tsx  MiddleEllipsis.tsx  Modal.test.tsx  Modal.tsx  ProjectPicker.tsx  RecentFilePopover.test.tsx  RecentFilePopover.tsx  RecentsModal.test.tsx  RecentsModal.tsx  RelativeTime.tsx  (+9 more)
scripts/: build-site.sh
scripts/hooks/: commit-msg  pre-commit  pre-push
src/vantage/: cli.py  config.py  main.py  settings.py  version.py
tests/: conftest.py  test_api.py  test_clean_worktree.py  test_cli.py  test_config.py  test_fs_service.py  test_git_service.py  test_global_files.py  test_perf.py  test_security.py  test_static_builder.py
userguide/: cli-reference.md  configuration.md  daemon-mode.md  features.md  getting-started.md  keyboard-shortcuts.md  static-sites.md
(+52 files in other folders)
