[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project]
name = "vantage-md"
dynamic = ["version"]
description = "A beautiful local Markdown viewer with live reload and Git awareness"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "gitpython>=3.1.46",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.40.0",
    "watchfiles>=1.1.1",
]

[project.urls]
Homepage = "https://vantageapp.dev"
Repository = "https://github.com/mschulkind-oss/vantage"
Issues = "https://github.com/mschulkind-oss/vantage/issues"

[project.scripts]
vantage-md = "vantage.cli:main"
vantage = "vantage.cli:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vantage = ["frontend_dist/**/*"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnannotatedClassAttribute = false

[dependency-groups]
dev = [
    "basedpyright>=1.37.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.11",
]
